--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Googe Classroom</title>
+  <title>Groq AI Multi-Chat</title>
   <style>
     body {
       margin: 0;
