--- a/public/index.html
+++ b/public/index.html
@@ -1,95 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Groq AI Multi-Chat</title>
+  <meta charset="UTF-8">
+  <title>Groq AI Chat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    /* --- Reset --- */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      display: flex;
-      height: 100vh;
       background-color: #1e1e2f;
       color: #e6e6e6;
+      height: 100vh;
+      display: flex;
     }
 
-    /* Sidebar */
-    #sidebar {
-      width: 250px;
-      background-color: #282c34;
+    #container { display: flex; flex: 1; height: 100vh; }
+
+    /* --- Sidebar --- */
+    aside#sidebar {
+      width: 220px;
+      background-color: #23232f;
+      padding: 10px;
       border-right: 1px solid #333;
       display: flex;
       flex-direction: column;
-      overflow-y: auto;
-      transition: transform 0.3s ease;
     }
 
-    #sidebar.hidden {
-      transform: translateX(-100%);
-    }
-
-    #sidebar button {
+    #newChatBtn {
       background-color: #3a86ff;
+      color: #fff;
       border: none;
-      color: #fff;
+      border-radius: 6px;
       padding: 10px;
-      margin: 5px;
-      border-radius: 8px;
       cursor: pointer;
+      margin-bottom: 10px;
     }
 
-    #sessionList {
+    #chatList {
+      list-style: none;
       flex: 1;
-      display: flex;
-      flex-direction: column;
       overflow-y: auto;
     }
 
-    .session-item {
-      padding: 10px;
-      margin: 5px;
-      border-radius: 8px;
+    #chatList li {
+      padding: 8px;
+      margin-bottom: 5px;
       cursor: pointer;
-      background-color: #44475a;
+      border-radius: 6px;
+      background-color: #2e2e42;
+      color: #e6e6e6;
+      font-size: 14px;
     }
 
-    .session-item.active {
+    #chatList li.active {
       background-color: #3a86ff;
       color: #fff;
     }
 
-    /* Main chat area */
-    #main {
+    /* --- Main chat area --- */
+    main {
       flex: 1;
       display: flex;
       flex-direction: column;
     }
 
     header {
-      padding: 15px;
       background-color: #282c34;
+      padding: 15px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
       border-bottom: 1px solid #333;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    header button {
-      background-color: #3a86ff;
-      border: none;
-      color: #fff;
-      padding: 5px 10px;
-      border-radius: 6px;
-      cursor: pointer;
     }
 
     #chat {
       flex: 1;
       padding: 15px;
+      overflow-y: auto;
       display: flex;
       flex-direction: column;
       gap: 10px;
-      overflow-y: auto;
     }
 
     .msg {
@@ -135,48 +127,32 @@
       cursor: pointer;
     }
 
-    /* Mobile adjustments */
-    @media screen and (max-width: 700px) {
-      body {
-        flex-direction: column;
-      }
-
-      #sidebar {
-        width: 100%;
-        flex-direction: row;
-        overflow-x: auto;
-        overflow-y: hidden;
-      }
-
-      #sessionList {
-        flex-direction: row;
-        overflow-x: auto;
-      }
-
-      #main {
-        flex: 1;
-      }
+    /* --- Mobile responsiveness --- */
+    @media (max-width: 600px) {
+      #container { flex-direction: column; }
+      aside#sidebar { width: 100%; display: flex; flex-direction: row; overflow-x: auto; border-right: none; border-bottom: 1px solid #333; }
+      #chatList { display: flex; flex-direction: row; flex: 1; overflow-x: auto; margin-left: 5px; }
+      #chatList li { margin-right: 5px; margin-bottom: 0; white-space: nowrap; }
+      main { flex: 1; }
+      #chat { height: 50vh; }
     }
   </style>
 </head>
 <body>
-  <div id="sidebar">
-    <button onclick="promptNewChat()">+ New Chat</button>
-    <div id="sessionList"></div>
+  <div id="container">
+    <aside id="sidebar">
+      <button id="newChatBtn">+ New Chat</button>
+      <ul id="chatList"></ul>
+    </aside>
+    <main>
+      <header>Groq AI Chat</header>
+      <div id="chat"></div>
+      <footer>
+        <input id="input" placeholder="Type a message...">
+        <button onclick="send()">Send</button>
+      </footer>
+    </main>
   </div>
-
-  <div id="main">
-    <header>
-      <span>Groq AI Chat</span>
-      <button onclick="toggleSidebar()">☰</button>
-    </header>
-    <div id="chat"></div>
-    <footer>
-      <input id="input" placeholder="Type a message...">
-      <button onclick="send()">Send</button>
-    </footer>
-  </div>
-
   <script src="main.js"></script>
 </body>
 </html>
