--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Groq AI Chat</title>
+  <title>Google Classroom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* --- Reset --- */
@@ -146,7 +146,7 @@
       #sidebar {
         position: absolute;
         top: 0;
-        left: -250px; /* hidden by default */
+        left: 250px; /* hidden by default */
         height: 100%;
       }
       #sidebar.active { left: 0; }
@@ -164,7 +164,7 @@
       <ul id="chatList"></ul>
     </aside>
     <main>
-      <header>Groq AI Chat</header>
+      <header>OGMSAI</header>
       <div id="chat"></div>
       <footer>
         <input id="input" placeholder="Type a message...">
