--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,9 @@
         height: 100%;
       }
       #sidebar.active { left: 0; }
-      #sidebarToggle { display: block; }
+      #sidebarToggle { display: block;
+                     left: 0px;
+                     top: 100%;}
       #chatList { overflow-x: auto; }
       #chat { height: 50vh; }
     }
