--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
       }
       #sidebar.active { left: 0; }
       #sidebarToggle { display: block;
-                     left: 0px;
+                     left: 100%;
                      top: 100%;}
       #chatList { overflow-x: auto; }
       #chat { height: 50vh; }
