--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,17 @@
   <title>Google Classroom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* --- Reset --- */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-
     body {
       font-family: Arial, sans-serif;
       background-color: #1e1e2f;
       color: #e6e6e6;
       height: 100vh;
       display: flex;
+      margin: 0;
     }
-
     #container { display: flex; flex: 1; height: 100vh; position: relative; }
 
-    /* --- Sidebar --- */
+    /* Sidebar */
     aside#sidebar {
       width: 220px;
       background-color: #23232f;
@@ -29,9 +26,8 @@
       transition: left 0.3s ease;
       z-index: 1000;
     }
-
     #sidebarToggle {
-      display: none; /* shown on mobile */
+      display: none;
       margin-bottom: 10px;
       background-color: #3a86ff;
       color: white;
@@ -40,7 +36,6 @@
       border-radius: 6px;
       cursor: pointer;
     }
-
     #newChatBtn {
       background-color: #3a86ff;
       color: #fff;
@@ -50,13 +45,11 @@
       cursor: pointer;
       margin-bottom: 10px;
     }
-
     #chatList {
       list-style: none;
       flex: 1;
       overflow-y: auto;
     }
-
     #chatList li {
       padding: 8px;
       margin-bottom: 5px;
@@ -66,19 +59,10 @@
       color: #e6e6e6;
       font-size: 14px;
     }
+    #chatList li.active { background-color: #3a86ff; color: #fff; }
 
-    #chatList li.active {
-      background-color: #3a86ff;
-      color: #fff;
-    }
-
-    /* --- Main chat area --- */
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-
+    /* Main */
+    main { flex: 1; display: flex; flex-direction: column; }
     header {
       background-color: #282c34;
       padding: 15px;
@@ -87,7 +71,6 @@
       font-weight: bold;
       border-bottom: 1px solid #333;
     }
-
     #chat {
       flex: 1;
       padding: 15px;
@@ -96,41 +79,27 @@
       flex-direction: column;
       gap: 10px;
     }
-
-    .msg {
-      padding: 10px 15px;
-      border-radius: 12px;
-      max-width: 70%;
-      word-wrap: break-word;
-    }
-
-    .user {
-      align-self: flex-end;
-      background-color: #3a86ff;
-      color: #fff;
-    }
-
-    .bot {
-      align-self: flex-start;
-      background-color: #44475a;
-      color: #f8f8f2;
-    }
+    .msg { padding: 10px 15px; border-radius: 12px; max-width: 70%; word-wrap: break-word; }
+    .user { align-self: flex-end; background-color: #3a86ff; color: #fff; }
+    .bot { align-self: flex-start; background-color: #44475a; color: #f8f8f2; }
+    .file { font-style: italic; }
 
     footer {
       display: flex;
       padding: 10px;
       background-color: #282c34;
       border-top: 1px solid #333;
+      gap: 8px;
     }
-
-    footer input {
+    footer input[type="text"] {
       flex: 1;
       padding: 10px;
       border: none;
       border-radius: 8px;
-      margin-right: 10px;
     }
-
+    footer input[type="file"] {
+      display: none;
+    }
     footer button {
       background-color: #3a86ff;
       color: #fff;
@@ -140,21 +109,16 @@
       cursor: pointer;
     }
 
-    /* --- Mobile responsiveness --- */
+    /* Mobile */
     @media (max-width: 600px) {
       #container { flex-direction: column; }
       #sidebar {
         position: absolute;
-        top: 0;
-        left: -250px; /* hidden by default */
+        top: 0; left: -250px;
         height: 100%;
       }
       #sidebar.active { left: 0; }
-      #sidebarToggle { display: block;
-                     left: 100%;
-                     top: 100%;}
-      #chatList { overflow-x: auto; }
-      #chat { height: 50vh; }
+      #sidebarToggle { display: block; }
     }
   </style>
 </head>
@@ -169,7 +133,9 @@
       <header>OGMSAI</header>
       <div id="chat"></div>
       <footer>
-        <input id="input" placeholder="Type a message...">
+        <input id="input" type="text" placeholder="Type a message...">
+        <label for="fileUpload" style="background:#3a86ff; padding:10px; border-radius:8px; cursor:pointer; color:white;">📎</label>
+        <input id="fileUpload" type="file">
         <button onclick="send()">Send</button>
       </footer>
     </main>
@@ -181,11 +147,6 @@
     const sidebar = document.getElementById("sidebar");
     const sidebarToggle = document.getElementById("sidebarToggle");
     sidebarToggle.onclick = () => sidebar.classList.toggle("active");
-
-    // Auto-hide sidebar on mobile when selecting chat
-    function hideSidebarOnMobile() {
-      if (window.innerWidth <= 600) sidebar.classList.remove("active");
-    }
   </script>
 </body>
 </html>
