--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Google Classroom</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>OGMSAI</h1>
   </header>
 
-  <div id="container">
-    <!-- Sidebar -->
-    <aside id="sidebar">
-      <button id="new-chat">+ New Chat</button>
-      <ul id="chat-list"></ul>
-    </aside>
+  <main>
+    <div id="chat-container">
+      <div id="messages"></div>
+      <div id="input-area">
+        <input type="text" id="user-input" placeholder="Type a message..." />
+        <button id="send-btn">Send</button>
+        <button id="clear-btn">Clear Chat</button>
+      </div>
+    </div>
+  </main>
 
-    <!-- Chat Area -->
-    <main id="chat-area">
-      <div id="chat-box"></div>
-      <form id="chat-form">
-        <input type="text" id="chat-input" placeholder="Type a message..." required />
-        <button type="submit">Send</button>
-      </form>
-    </main>
-  </div>
-
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
