--- a/public/admin.html
+++ b/public/admin.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login</title>
-  <style>
-    body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background: #f0f2f5; }
-    form { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    input { display: block; margin: 1rem 0; padding: 0.5rem; width: 100%; }
-    button { padding: 0.5rem 1rem; cursor: pointer; }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Admin Panel – OGMSAI</title>
+  <link rel="stylesheet" href="admin.css" />
 </head>
 <body>
-  <form method="POST" action="/admin/login">
-    <h2>Admin Login</h2>
-    <input type="text" name="username" placeholder="Username" required />
-    <input type="password" name="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-  </form>
-</body>
-</html>
+  <div class="container" id="login-container">
+    <h1>OGMSAI Admin</h1>
+    <form id="login-form">
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
+    <div id="login-error"></div>
+  </div>
+
+  <div class="container hidden" id="dashboard-container">
+    <h1>Admin Dashboard</h1>
+    <div class="controls">
+      <label class="switch">
+        <input type="checkbox" id="ai-toggle" />
+        <span class="slider"></span>
+      </label>
+      <span id="ai-status">AI Disabled</span>
+    </div>
+    <button id="logout-btn">Logout</button>
+  </div>
+
+  <script
