--- a/public/admin.html
+++ b/public/admin.html
@@ -2,30 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Admin Panel – OGMSAI</title>
-  <link rel="stylesheet" href="admin.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Panel</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container" id="login-container">
-    <h1>OGMSAI Admin</h1>
+  <h1>OGMSAI Admin Panel</h1>
+
+  <div id="login-view">
+    <h2>Login</h2>
     <form id="login-form">
       <input type="text" id="username" placeholder="Username" required />
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-    <div id="login-error"></div>
   </div>
 
-  <div class="container hidden" id="dashboard-container">
-    <h1>Admin Dashboard</h1>
-    <div class="controls">
-      <label class="switch">
-        <input type="checkbox" id="ai-toggle" />
-        <span class="slider"></span>
-      </label>
-      <span id="ai-status">AI Disabled</span>
-    </div>
-    <button id="logout-btn">Logout</button>
+  <div id="dashboard-view" style="display:none;">
+    <h2>Dashboard</h2>
+    <label>
+      <input type="checkbox" id="toggle-ai" />
+      Enable AI
+    </label>
+    <br /><br />
+    <button id="logout">Logout</button>
   </div>
 
-  <script
+  <script src="admin.js"></script>
+</body>
+</html>
