--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Google Classroom</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>OGMSAI</h1>
   </header>
 
-  <main>
-    <div id="chat-window"></div>
-    <form id="chat-form">
-      <input type="text" id="chat-input" placeholder="Type your message..." required />
-      <button type="submit">Send</button>
-    </form>
-  </main>
+  <div id="container">
+    <aside id="sidebar">
+      <h2>Chats</h2>
+      <ul id="chat-list"></ul>
+      <button id="new-chat">+ New Chat</button>
+    </aside>
+
+    <main id="main-chat">
+      <div id="chat-window"></div>
+      <form id="chat-form">
+        <input type="text" id="chat-input" placeholder="Type your message..." required />
+        <input type="file" id="file-input" />
+        <button type="submit">Send</button>
+      </form>
+    </main>
+  </div>
 
   <script src="main.js"></script>
 </body>
