--- a/public/admin.html
+++ b/public/admin.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Panel</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>OGMSAI Admin Panel</h1>
@@ -12,8 +12,8 @@
   <div id="login-view">
     <h2>Login</h2>
     <form id="login-form">
-      <input type="text" id="username" placeholder="Username" required />
-      <input type="password" id="password" placeholder="Password" required />
+      <input type="text" id="username" placeholder="Username" required>
+      <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
   </div>
@@ -21,10 +21,9 @@
   <div id="dashboard-view" style="display:none;">
     <h2>Dashboard</h2>
     <label>
-      <input type="checkbox" id="toggle-ai" />
-      Enable AI
+      <input type="checkbox" id="toggle-ai"> Enable AI
     </label>
-    <br /><br />
+    <br><br>
     <button id="logout">Logout</button>
   </div>
 
